# score-core

./: CHANGELOG.md  CONTRIBUTING.md  LICENCE  README.md  WRITING_SKILLS.md  pyproject.toml  score_spec.md
docs/: score_context_api_spec.md  score_governance_metadata_spec.md  score_recording_spec.md
examples/: brand.md
src/score/: __init__.py  cli.py  context_api.py  library_validator.py  parser.py  recording.py  schema.py  serialiser.py  validator.py
tests/: test_classification_combination.py  test_migrate_cli.py
